"""triton-common bazel module"""
module(
    name = "triton-common",
    version = "r23.10",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "3.19.2")
bazel_dep(name = "grpc", version = "1.48.1.bcr.3", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "rules_cuda", version = "0.2.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "googletest", version = "1.14.0", dev_dependency = True)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain", dev_dependency = True)
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")
